--- a/assets/css/resets.css
+++ b/assets/css/resets.css
@@ -3,3 +3,14 @@
   margin: 0;
   box-sizing: border-box;
 }
+body, html {
+  height: 100%;
+  font-family: sans-serif;
+}
+ul{
+  list-style-type: none;
+}
+a {
+  color: initial;
+  text-decoration: none;
+}
